--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   </head>
   <body>
     <div class="grid"></div>
-    <form class="book-form" id="formBook">
+    <!-- <a href="#" class="btn" id="btnRecordNewBook">Record new book</a> -->
+    <button class="btn" id="btnRecordNewBook">Record new book</button>
+    <form class="book-form book-form--hidden" id="formBook">
       <label for="formCoverURL">Cover URL</label>
       <input type="text" id="formCoverURL" />
       <label for="book-name">Name: </label>
@@ -22,6 +24,7 @@
       <input type="checkbox" name="book-read" id="formHasRead" />
       <button type="submit" form="formBook">Add Book</button>
     </form>
+
     <script src="script.js"></script>
   </body>
 </html>
